Fix missing background color of popover, load projects when opening search overlay

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -9,7 +9,7 @@
     border-bottom: 1px solid var(--border-color);
   }
 
-  .ant-popover-inner {
+  .ant-popover-inner, .ant-popover-inner-content {
     background: var(--background-color);
   }
 
