--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,5 +1,6 @@
 :root {
   --full-color: #000;
+  --background-color: #fff;
   --dark-color: #080b0d;
   --border-color: #d9d9d9;
   --border-color-flashier: #777;
